[package]
name = "stp"
version = "0.1.0"
authors = ["Steve James <0x2t1ff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
soketto = "0.7.0"
tokio = { version = "1.13.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tokio-util = { version = "0.6.9", features = ["compat"] }
